--- a/learning_path_01/02_performance_metrics.ipynb
+++ b/learning_path_01/02_performance_metrics.ipynb
@@ -2,6 +2,12 @@
   "cells": [
     {
       "cell_type": "code",
+      "execution_count": null,
+      "id": "HODwAKlYqxlT",
+      "metadata": {
+        "id": "HODwAKlYqxlT"
+      },
+      "outputs": [],
       "source": [
         "# Copyright 2025 Google LLC\n",
         "#\n",
@@ -16,13 +22,7 @@
         "# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.\n",
         "# See the License for the specific language governing permissions and\n",
         "# limitations under the License."
-      ],
-      "metadata": {
-        "id": "HODwAKlYqxlT"
-      },
-      "id": "HODwAKlYqxlT",
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
@@ -70,6 +70,10 @@
     },
     {
       "cell_type": "markdown",
+      "id": "Ne2VgCJ-rJWx",
+      "metadata": {
+        "id": "Ne2VgCJ-rJWx"
+      },
       "source": [
         "## Overview\n",
         "\n",
@@ -80,15 +84,11 @@
         "- What **latency** and **throughput** mean.\n",
         "- Why these metrics often trade off against each other.\n",
         "- How different parameters (like batch size, prompt length, sampling strategy) affect performance.\n",
-        "- How to measure and visualize **p50 vs p90 latency**, **first-token vs total latency**, and find the \"sweet spot\".\n",
+        "- How to measure and visualize **p50 vs p90 latency**, **first token (also known as Time to First Token) vs total latency**, and find the \"sweet spot\".\n",
         "- What this means for real-world **user experience**.\n",
         "\n",
         "By the end of this notebook, you'll not only be able to benchmark an AI inference — you'll know what the numbers actually mean and how to tune them for real applications."
-      ],
-      "metadata": {
-        "id": "Ne2VgCJ-rJWx"
-      },
-      "id": "Ne2VgCJ-rJWx"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -104,7 +104,7 @@
         "- An NVIDIA GPU environment\n",
         "- Your Hugging Face [access token](https://huggingface.co/settings/token)\n",
         "\n",
-        "Let's test which GPUs are avaialable in our system:"
+        "Let's test which GPUs are available in our system:"
       ]
     },
     {
@@ -1389,7 +1389,7 @@
         "plt.plot(x, lat_p50,  marker=\"s\", label=\"Total latency (p50)\")\n",
         "plt.plot(x, lat_p90,  marker=\"x\", label=\"Total latency (p90)\")\n",
         "\n",
-        "plt.title(\"First-Token vs Total Latency — p50 & p90\")\n",
+        "plt.title(\"First Token vs Total Latency — p50 & p90\")\n",
         "plt.xlabel(\"Batch size\")\n",
         "plt.ylabel(\"Seconds\")\n",
         "plt.grid(True, which=\"both\", linestyle=\"--\", linewidth=0.5)\n",
@@ -1407,7 +1407,7 @@
         "id": "0427b8d8-2357-4cd9-b430-0e30f3ae68e4"
       },
       "source": [
-        "**Interpretation:** This chart shows how Time to First Token (TTFT) and total latency evolve together as batch size increases. TTFT remains much lower than total latency, meaning users see early feedback well before the full response finishes. However, both grow with larger batches, and the widening gap emphasizes the trade-off: batching improves throughput but stretches total completion times, while still preserving some interactivity through faster first-token delivery."
+        "**Interpretation:** This chart shows how Time to First Token (TTFT) and total latency evolve together as batch size increases. TTFT remains much lower than total latency, meaning users see early feedback well before the full response finishes. However, both grow with larger batches, and the widening gap emphasizes the trade-off: batching improves throughput but stretches total completion times, while still preserving some interactivity through faster first token delivery."
       ]
     },
     {
@@ -1995,7 +1995,7 @@
       "source": [
         "## Stop this notebook\n",
         "\n",
-        "Make sure to restart the jupyter kernel before proceeding with next excercizes."
+        "Make sure to restart the jupyter kernel before proceeding with next exercises."
       ]
     },
     {
@@ -2010,29 +2010,12 @@
         "import os\n",
         "os._exit(0)"
       ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "id": "ddc20164-85bc-471f-9716-1e3f6db37720",
-      "metadata": {
-        "id": "ddc20164-85bc-471f-9716-1e3f6db37720"
-      },
-      "outputs": [],
-      "source": []
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "id": "0a22c329-f886-4032-b7e1-e0b595e6747a",
-      "metadata": {
-        "id": "0a22c329-f886-4032-b7e1-e0b595e6747a"
-      },
-      "outputs": [],
-      "source": []
     }
   ],
   "metadata": {
+    "colab": {
+      "provenance": []
+    },
     "kernelspec": {
       "display_name": "Python 3 (ipykernel)",
       "language": "python",
@@ -2049,9 +2032,6 @@
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
       "version": "3.12.3"
-    },
-    "colab": {
-      "provenance": []
     }
   },
   "nbformat": 4,
