--- a/learning_path_01/01_foundations_of_inference.ipynb
+++ b/learning_path_01/01_foundations_of_inference.ipynb
@@ -2,6 +2,12 @@
   "cells": [
     {
       "cell_type": "code",
+      "execution_count": null,
+      "id": "J2PVXjj1qtwg",
+      "metadata": {
+        "id": "J2PVXjj1qtwg"
+      },
+      "outputs": [],
       "source": [
         "# Copyright 2025 Google LLC\n",
         "#\n",
@@ -16,16 +22,14 @@
         "# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.\n",
         "# See the License for the specific language governing permissions and\n",
         "# limitations under the License."
-      ],
-      "metadata": {
-        "id": "J2PVXjj1qtwg"
-      },
-      "id": "J2PVXjj1qtwg",
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
+      "id": "kNBgd14rP9XZ",
+      "metadata": {
+        "id": "kNBgd14rP9XZ"
+      },
       "source": [
         "# Foundations of Inference\n",
         "<table align=\"left\">\n",
@@ -61,11 +65,7 @@
         "  <img width=\"20px\" src=\"https://upload.wikimedia.org/wikipedia/commons/5/51/Facebook_f_logo_%282019%29.svg\" alt=\"Facebook logo\">\n",
         "</a>\n",
         "</p>"
-      ],
-      "metadata": {
-        "id": "kNBgd14rP9XZ"
-      },
-      "id": "kNBgd14rP9XZ"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -101,7 +101,7 @@
         "- Access to the gated [Gemma 3 270M](https://huggingface.co/google/gemma-3-270m) or [Gemma 3 270M Instruction-Tuned](https://huggingface.co/google/gemma-3-270m-it) model on Hugging Face\n",
         "- Your Hugging Face [access token](https://huggingface.co/settings/token)\n",
         "\n",
-        "Let's test which GPUs are avaialable in our system:"
+        "Let's test which GPUs are available in our system:"
       ]
     },
     {
@@ -213,11 +213,11 @@
         "id": "20a668c2-1952-4bcd-8e83-77810f321783"
       },
       "source": [
-        "### Why do we need GPUs for inference\n",
+        "### Why do we need GPUs for inference?\n",
         "\n",
         "You may have heard that we need a GPU to run AI inference. Why is so? To answer this question let's run a simple experiment.\n",
         "\n",
-        "Let's first download our model. We wil be usung the model [Gemma 3 270M Instruction-Tuned](https://huggingface.co/google/gemma-3-270m-it) by Google. Before you continue, make sure to open the [model page](https://huggingface.co/google/gemma-3-270m-it) and accept the terms of usage agreement."
+        "Let's first download our model. We wil be using the model [Gemma 3 270M Instruction-Tuned](https://huggingface.co/google/gemma-3-270m-it) by Google. Before you continue, make sure to open the [model page](https://huggingface.co/google/gemma-3-270m-it) and accept the terms of usage agreement."
       ]
     },
     {
@@ -674,7 +674,7 @@
       "source": [
         "## Stop this notebook\n",
         "\n",
-        "Make sure to restart the jupyter kernel before proceeding with next excercizes."
+        "Make sure to restart the jupyter kernel before proceeding with next exercises."
       ]
     },
     {
@@ -692,6 +692,12 @@
     }
   ],
   "metadata": {
+    "accelerator": "GPU",
+    "colab": {
+      "gpuType": "T4",
+      "provenance": [],
+      "toc_visible": true
+    },
     "kernelspec": {
       "display_name": "Python 3",
       "name": "python3"
@@ -707,13 +713,7 @@
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
       "version": "3.12.3"
-    },
-    "colab": {
-      "provenance": [],
-      "toc_visible": true,
-      "gpuType": "T4"
-    },
-    "accelerator": "GPU"
+    }
   },
   "nbformat": 4,
   "nbformat_minor": 5
